opam-version: "2.0"
maintainer: "Aaron L. Zeng <me@bcc32.com>"
authors: [ "Aaron L. Zeng <me@bcc32.com>" ]
tags: []
license: "MIT"
homepage: "https://github.com/bcc32/snapsend"
dev-repo: "git+https://github.com/bcc32/snapsend.git"
bug-reports: "https://github.com/bcc32/snapsend/issues"
doc: "https://github.com/bcc32/snapsend"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "dune"     {build}

  "ppx_jane" {>= "v0.12.0" & < "v0.13.0"}
  "core"     {>= "v0.12.0" & < "v0.13.0"}
  "async"    {>= "v0.12.0" & < "v0.13.0"}
  "async_interactive" {>= "v0.12.0" & < "v0.13.0"}
  "re"       {>= "1.7.3"}
  "shexp"    {>= "v0.12.0" & < "v0.13.0"}
]
